app/globals.css
/* ... */
.border-left {
  border-width: 2px;
  border-style: solid;
  -o-border-image: linear-gradient(
    to left,
    rgba(0, 0, 0, 0),
    rgba(0, 0, 0, 0),
    #dcb558
  );
  border-image: linear-gradient(
    to left,
    rgba(0, 0, 0, 0),
    rgba(0, 0, 0, 0),
    #dcb558
  );
  border-image-slice: 1;
  border-radius: 0.375rem !important;
}

.border-top {
  border-width: 1px;
  border-style: solid;
  -o-border-image: linear-gradient(to top, rgba(0, 0, 0, 0), #dcb558);
  border-image: linear-gradient(to top, rgba(0, 0, 0, 0), #dcb558);
  border-image-slice: 1;
  border-radius: 0.375rem !important;
}
.border-top-white {
  border-width: 1px;
  border-style: solid;
  border-radius: 10px;
  -o-border-image: linear-gradient(to top, rgba(0, 0, 0, 0), #ffff);
  border-image: linear-gradient(to top, rgba(0, 0, 0, 0), #ffff);
  border-image-slice: 1;
}
.border-top-white:hover {
  border-color: #283646;
}
.border-round {
  border-width: 1px;
  border-style: solid;
  border-color: #dcb558;
  border-image-slice: 1;
  border-radius: 0.375rem !important;
}

.selectedDate {
  border-width: 1px;
  border-radius: 0.375rem;
  background-image: linear-gradient(to right, #dfbf68, #bfa04b, #dfbf68);
  color: #fff;
}
.scrollable-container {
  overflow: auto;
  scrollbar-width: thin;
  scrollbar-color: #f1be3f transparent;
}

.scrollable-container::-webkit-scrollbar {
  width: 6px; /* Width of the custom scrollbar */
}

.scrollable-container::-webkit-scrollbar-track {
  background-color: white; /* Color of the scrollbar track */
}

.scrollable-container::-webkit-scrollbar-thumb {
  background-color: #f1be3f; /* Color of the scrollbar thumb */
}

.scrollable-container::-webkit-scrollbar-thumb:hover {
  background-color: #e0a824; /* Color of the scrollbar thumb on hover */
}

.vector_background {
  background-image: url(../components/prev/assets/images/global/Vector-bg.png);
  /* Adjust the opacity here */
  background-color: rgba(0, 24, 46, 0.7);
  background-blend-mode: multiply;
  background-repeat: repeat;
  background-size: contain;
}

.vector_background_modal {
  background-image: url(../components/prev/assets/images/global/footer.png);
  /* Adjust the opacity here */
  background-color: rgba(0, 24, 46, 0.8);
  background-blend-mode: multiply;
  background-repeat: repeat;
}

.footer_background {
  background-image: url(../components/prev/assets/images/global/footer.png);
  /* Adjust the opacity here */
  background-color: rgba(0, 24, 46, 0.7);
  background-blend-mode: multiply;
  background-repeat: repeat;
}

.footer_background_home_invest {
  background-image: url(../components/prev/assets/images/global/footer.png);
  /* Adjust the opacity here */

  background-color: #000f1d;
  background-blend-mode: color;
  background-repeat: repeat;
}
.footer_background_home {
  background-image: url(../components/prev/assets/images/global/footer.png);
  /* Adjust the opacity here */
  background-color: #000f1d;
  background-blend-mode: color;
  background-repeat: repeat;
}
.footer_background_home2 {
  background-image: url(../components/prev/assets/images/global/footer.png);
  background-blend-mode: color;
  background-repeat: repeat;
  opacity: 0.4;
}

.dropdown_background {
  background-image: url(../components/prev/assets/images/global/menubg.png);
  /* Adjust the opacity here */
  background-color: rgba(0, 24, 46, 0.7);
  background-blend-mode: multiply;
  background-repeat: repeat-x;
}

.white_background {
  background-image: url(../components/prev/assets/images/global/arrange.png);
  background-color: rgba(255, 244, 234, 1);
  background-blend-mode: multiply;
  background-repeat: repeat-x;
}

.border-bottom {
  border-top: 0 !important;
  border-right: 0 !important;
  border-width: 5px;
  border-style: solid;
  -o-border-image: linear-gradient(
    to right,
    rgba(0, 0, 0, 0),
    rgba(0, 0, 0, 0),
    #ffffff
  );
  border-image: linear-gradient(
    to right,
    rgba(0, 0, 0, 0),
    rgba(0, 0, 0, 0),
    #ffffff
  );
  border-image-slice: 1;
  z-index: 1;
}

.filter-box_shadow {
  border-width: 0px 5px;
  border-style: solid;
  border-color: transparent;
  box-shadow: 0px 0px 15px 2px rgba(255, 255, 255, 0.3);
  border-radius: 5px;
}
.filter-box_shadow::before,
.filter-box_shadow::after {
  content: "";
  position: absolute;
  top: 0px;
  bottom: 0.5px;
  width: 5px;
  background-color: #f1be3f;
  opacity: 0;
  animation: pulse 2.5s infinite;
}

.filter-box_shadow::before {
  left: -4.9px;
  animation-delay: 1s;
  border-top-left-radius: 900px;
  border-bottom-left-radius: 900px;
}

.filter-box_shadow::after {
  right: -4.9px;
  animation-delay: 1s;
  border-top-right-radius: 900px;
  border-bottom-right-radius: 900px;
}

@keyframes pulse {
  0% {
    opacity: 0;
  }
  50% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

@keyframes pulse4 {
  0% {
    opacity: 0;
  }
  50% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}
.overlay {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  height: 100%;
  width: 40%;
  background-image: linear-gradient(
    to right,
    rgba(0, 15, 29, 1),
    rgba(0, 15, 29, 0.85),
    rgba(0, 15, 29, 0.51),
    rgba(1, 21, 39, 0)
  );
}

.overlay::before {
  content: "";
  position: absolute;
  background-image: linear-gradient(
    to right,
    rgba(0, 15, 29, 1),
    rgba(0, 15, 29, 0.85),
    rgba(0, 15, 29, 0.51),
    rgba(1, 21, 39, 0)
  );
}
.overlay::after {
  content: "";
  position: absolute;
  background-image: linear-gradient(
    to right,
    rgba(0, 15, 29, 1),
    rgba(0, 15, 29, 0.85),
    rgba(0, 15, 29, 0.51),
    rgba(1, 21, 39, 0)
  );
}
/* ... */

